# ABM_GaussianProcess

./: .Rhistory  .gitignore  AGENTS.md  README.md  mathematical_statistical_underpinnings_gp_cognition_oft_abm.md  pyproject.toml  requirements.txt  theoretical_foundations_roadmap_gp_cognition_oft_archaeological_abm.md
AI_Context/: MVP Product Specification.md
CODE/: raster_pkg_random_walk.R
CODE/GP_fitting/: 1D_gpe_package_example.R  2D_gpe_package_example.R  Cholesky_method_attempt.R  basic_1D_GP_analytical_anotherApproach_1D_Spikes.R  basic_1D_GP_analytical_example.R  basic_2D_GP_anaytical_example.R  prior_sample_Cholesky.R  product_kernel_2D_GP.R  product_kernel_2D_GP_kernlab.R  varying_noise_2D_GP_analytical.R
Doc/: Implementation_Plan.md
R_legacy_code/GP_fitting/: 3D_plot_2D_GP_example.R  basic_1D_GP_analytical_anotherApproach_1D_Spikes.R  product_kernel_2D_GP.R  varying_noise_1D_GP_analytical.R
legancy_R/GP_fitting/: 2D_gpe_package_example.R
scripts/: run_parameter_sweep.py
src/gp_foraging/: __init__.py  agent.py  cli.py  config.py  landscape.py  metrics.py  plotting.py  policies.py  simulator.py
tests/: test_determinism.py  test_gp_smoke.py  test_policy_sanity.py  test_smoke.py
