[project]
name = "gp-foraging"
version = "0.1.0"
description = "Bayesian optimal foraging on raster grids via Gaussian Process cognition."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "ABM GP Contributors" }
]

dependencies = [
  "numpy==1.26.4",
  "scipy==1.12.0",
  "scikit-learn==1.4.2",
  "matplotlib==3.8.3",
  "pandas==2.2.1",
  "typer==0.12.3",
  "pytest==8.1.1",
]

[project.urls]
Homepage = "https://github.com/mrecos/ABM_GaussianProcess"

[project.scripts]
gp-foraging = "gp_foraging.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
